[package]
name = "Video3dScanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# video-rs = { version = "0.1", features = ["ndarray"] }
video-rs = { version = "0.1", features = ["ndarray"], git = "https://github.com/alex13sh/oddity-video-ffmpeg5", rev = "0bd1b79" }
ndarray = { version = "0.15" }
zip = "0.6.3"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
